# shittruyen

./: .BUILDINFO  .PKGINFO  .editorconfig  .env  .eslintrc.json  .prettierrc  BUILD_LOG.md  README.md  config.json  eslint.config.mjs  eslintrc.json  globe.json  index.html  info.json  package.json  pnpm-lock.yaml  qodana.yaml  shittruyen.desktop  shittruyen.wxs  tags.json  tailwind.config.ts  themes.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: code_quality.yml  main.yml  qodana_code_quality.yml
bundle_templates/: create_template.sh  shittruyen.desktop  shittruyen.wxl  shittruyen.wxs
bundle_templates/linux/: main.desktop
bundle_templates/templates/: linux.desktop  window.wxs
bundle_templates/window/: main.wxs
src/: App.tsx  globals.css  main.tsx  root.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: home.ts  index.ts  tags.ts  top.ts
src/components/: loading.tsx  not-found.tsx  welcome.tsx  wrapped.tsx
src/components/header/: center.tsx  index.tsx  left.tsx  right.tsx
src/components/icons/: index.ts  windows.tsx
src/components/sidebar/: index.tsx  left.tsx  right.tsx
src/components/ui/: avatar.tsx  background-beams.tsx  badge.tsx  button.tsx  card.tsx  (+19 more)
src/lib/: cookie.ts  themes.ts
src/pages/: home.tsx  index.tsx  layout.tsx  loading.tsx  not-found.tsx  welcome.tsx
src/routes/: __root.tsx  bookmark.lazy.tsx  index.tsx  not-found.lazy.tsx  notification.lazy.tsx  notification.tsx  search.lazy.tsx  tag.lazy.tsx  welcome.lazy.tsx
src/store/: loading.ts  seo.ts  sidebar.ts  theme.ts
src/themes/: themes.css
src/types/: bookmark.ts  home_a.ts  manga.ts  top.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
(+75 files in other folders)
