[package]
name = "shittruyen"
version = "0.0.1"
description = "ShitTruyen đơn giản là một desktop app đa nền tảng của web Cứt Truyện nhưng nhiều tính năng hơn."
authors = ["9OwL"]
license = "MIT"
repository = "https://github.com/huyhoangg9owl/shittruyen"
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = "2.0.0-beta.0"
tauri-plugin-dialog = "2.0.0-beta.0"
serde_json = "1.0.122"
