[package]
name = "shittruyen"
version = "0.0.1"
description = "ShitTruyen đơn giản là một desktop app đa nền tảng của web Cứt Truyện nhưng nhiều tính năng hơn."
authors = ["9OwL"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = "2.0.0-beta.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0-beta.0"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = "0.5.2"
pingora = "0.3.0"
async-trait = "0.1.81"
pingora-load-balancing = "0.3.0"
pingora-proxy = "0.3.0"
trust-dns-resolver = "0.23.2"
